# New-Idea

./: .coverage  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  STEP1_CHECKLIST.md  STEP1_SAFETY_IMPLEMENTATION.md  STEP2_CHECKLIST.md  STEP2_SAFETY_INTEGRATION.md  STEP3_CHECKLIST.md  STEP3_IMPLEMENTATION.md  STEP4_COMPLETION_SUMMARY.md  STEP4_USER_EXPERIENCE.md  STEP5_COMPLETION_SUMMARY.md  check_emoji.py  check_hex.py  coverage.xml  demo_safety_integration.py  demo_safety_validator.py  fix_sidebar.py  pyproject.toml  run_glyphx.bat  run_glyphx.py  run_glyphx.sh  test_confirmation_dialog.py  test_model_refresh.py
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: AI_CHAT_UNIFICATION.md  ARCHITECTURE.md  CONTRIBUTING.md  CONVERSATIONAL_AGENT.md  GEMMA_GUIDE.md  MANUAL_TESTING_GUIDE.md  MODEL_DROPDOWN_GUIDE.md  SAFETY_GUIDE.md  TERMINAL_AI_GUIDE.md  TERMINAL_GUIDE.md  USER_GUIDE.md
examples/: gemma_services_example.py
glyphx/: __init__.py
glyphx/app/: __init__.py  __main__.py  gui.py
glyphx/app/infra/: chat_history.py  diagnostics.py  history.py  logger.py  paths.py  safety.py  (+1 more)
glyphx/tests/: __init__.py  test_auto_tagger.py  test_chat_history.py  test_classifier.py  test_export.py  test_gui_smoke.py  test_llm_client.py  test_logger.py  test_paths.py  test_properties.py  test_rate_limiting.py  test_registry.py  test_safety.py  test_session_summarizer.py  test_settings_service.py  test_step3_improvements.py  test_step4_settings.py  test_step5_integration.py  test_step5_performance.py  test_terminal.py  test_tools.py  test_tools_safety.py  test_worker.py
(+10 files in other folders)
